Java 21 fork of Pty4J.
 * Requires Java 21+ for FFMAPI
 * Zero-dependencies. JNA, PureJavaComm, Kotlin and SLF have all been removed
 * Performance focused.
 * Public API compatible with upstream
 * Uses same binaries helpers and libraries as upstream